--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -86,7 +86,7 @@ button:hover {
     <%= link_to 'Credit', credit_path, class: 'btn btn-primary' %>
     <%= link_to 'Debit', debit_path, class: 'btn btn-primary' %>
     <%= link_to 'Transactions History', transaction_history_path, class: 'btn btn-primary' %>
-    <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-primary' %>
+    <%= link_to 'Logout', destroy_user_session_path, class: 'btn btn-primary' %>
     <% end %>
   </div>
 </form>
