--- a/app/views/transactions/sendmoney.html.erb
+++ b/app/views/transactions/sendmoney.html.erb
@@ -1,9 +1,13 @@
+<head>
 
-<body>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+
+</head>
+<body>
+
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box}
@@ -75,7 +79,7 @@ button:hover {
     }
 }
 </style>
-</body>
+
 <div class="container">
 <%= form_with scope: :transactions,:html => {:id => "sendmoney"}, url: transactions_path ,local: true do |f| %>
 <%#= binding.pry %>
@@ -94,7 +98,7 @@ button:hover {
  </div>
 <% end %>
 
-
+</body>
 <script>
 
  jQuery.validator.addMethod("noSpace", function(value, element) { 
