--- a/app/views/transactions/sendmoney.html.erb
+++ b/app/views/transactions/sendmoney.html.erb
@@ -3,7 +3,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/jquery.validate.min.js"></script>
 
 </head>
 <body>
@@ -139,8 +139,8 @@ button:hover {
   messages: {
     "transactions[to]":{
       required: "This field is required",
-      minlength: "Name should not be Less than 8 characters",
-      maxlength: "Name should not be more than 15 characters"
+      minlength: "Account Number  should not be Less than 8 characters",
+      maxlength: "Account Number not be more than 15 characters"
       
     },
 
