--- a/app/views/transactions/sendmoney.html.erb
+++ b/app/views/transactions/sendmoney.html.erb
@@ -2,6 +2,7 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ 
 </head>
 <body>
 
@@ -9,8 +10,12 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box}
 
+  select  { background: #f1f1f1 !important;
+           padding: 15px 0px 15px 12px !important;
+          border-radius: 0px !important; }
+       
 /* Full-width input fields */
-input[type=text], input[type=password] {
+input[type=text], input[type=password],select {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -19,7 +24,7 @@ input[type=text], input[type=password] {
     background: #f1f1f1;
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type=text]:focus, input[type=password]:focus,select {
     background-color: #ddd;
     outline: none;
 }
@@ -83,8 +88,16 @@ button:hover {
 
 <h2>Please Make the transaction </h2>
 <%= f.text_field :from,readonly: true %>
-<%= f.text_field :to , placeholder: "TO" %>
-<%= f.text_field :typeof , placeholder: "Type" %>
+
+
+<%= f.select :to , options_for_select(@dropdown.insert(0,["Select Account Number",""])),{},{class: 'btn btn-default dropdown-toggle'}  %>
+
+
+<br>
+<br>
+
+<%= f.text_field :Name , placeholder: "Account Holder Name",readonly: true %>
+<%= f.text_field :typeof , readonly: true %>
 <%= f.text_field :description , placeholder: "Description" %>
 <br>
 <br>
@@ -95,9 +108,10 @@ button:hover {
  </div>
 <% end %>
 
+<%= @user %>
+
 </body>
 <script>
-
 
  $(document).ready(function(){
  $("#sendmoney").validate({
@@ -107,11 +121,8 @@ button:hover {
    },
     rules: {
     "transactions[to]":{
-      required: true,
-      maxlength: 15,
-      minlength: 8
-    },
-
+      required: true
+     },
     "transactions[typeof]":{
       required: true,
       maxlength: 10,
@@ -131,12 +142,10 @@ button:hover {
   }, 
   
   messages: {
-    "transactions[to]":{
-      required: "This field is required",
-      minlength: "Account Number  should not be Less than 8 characters",
-      maxlength: "Account Number not be more than 15 characters"
       
-    },
+    "transactions[to]":{
+      required: 'Please select a Value'
+     },
 
     "transactions[typeof]":{
       required: "This field is required",
@@ -161,4 +170,27 @@ button:hover {
   }
  });
 });
+
+$('#transactions_to').change(function(){
+var acc_no = $('#transactions_to').val();
+ $.ajax({
+    url : "/find",
+    type : 'get',
+    data : {
+
+
+      account_number : acc_no
+
+    },         
+    dataType: "script",
+        success: function(response){
+        console.log(response);      
+     }
+    
+    
+  });
+
+});
+
+
 </script>
